refactor(rpc): address review feedback on batched RPC persistence
- Rename TbRpcService.save -> update so the create/update pairing is
  self-documenting (matches createAsync/updateAsync); update all actor
  call sites and unit tests.
- Extract the (hash & 0x7FFFFFFF) % n striping into a shared
  HashPartitioner helper used by both TbSqlBlockingQueueWrapper and
  TbRpcService, so the end-to-end submission-order invariant has a single
  source of truth.
- Collapse the insert/update split in RpcInsertRepository.saveOrUpdate
  into a single partitioningBy pass.
- Remove the unused TbRpcService.findRpcById (and its now-orphaned import).
- Restore the prime-thread-count guidance on the RPC batch_threads /
  callback_threads yml comments.